Correct nav panel alignment.

--- a/app/less/components/nav/nav-panel.less
+++ b/app/less/components/nav/nav-panel.less
@@ -76,8 +76,6 @@
             }
 
             &.leftmost, &.rightmost {
-                left: auto;
-                right: 0;
                 transform: scale(1.1);
             }
         }
